@@ -1,0 +1,24 @@
+==[ COMPILING ]==
+To build the ircd, run:
+./Config
+make
+
+If you specified an alternative location during ./Config you also need
+to run "make install".
+
+==[ MAKING A CONFIG FILE ]==
+If you are new, then you need to create your own configfile:
+
+copy doc/example.conf to your main UnrealIRCd directory and call
+it unrealircd.conf .
+Then open it in an editor and carefully modify it, consult the docs
+(doc/unreal32docs.html, or online: www.unrealircd.com/unreal32docs.html)
+for more information about every block/setting.
+Common problems are explained in the FAQ, which is located at:
+http://www.vulnscan.org/UnrealIrcd/faq/ .
+
+==[ BOOTING YOUR IRCD ]==
+Just type: ./unreal start
+Note that after booting the errors are usually logged to ircd.log,
+so check that file if you have any problems.
+Again, check the FAQ (and docs) if you have any boot problems.
